--- a/package.json
+++ b/package.json
@@ -8,8 +8,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apollo-boost": "^0.4.9",
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "es6-promise": "^4.2.8",
+    "firebase": "^8.0.2",
+    "graphql": "^15.4.0",
+    "material-icons": "^0.3.1",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.0.5",
+    "vue": "^2.6.12",
+    "vue-apollo": "^3.0.5",
+    "vue-material-design-icons": "^4.11.0",
+    "vue-router": "^3.4.9",
+    "vuefire": "^2.2.4",
+    "vuesax": "^3.12.2",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -18,6 +32,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "vue-cli-plugin-apollo": "~0.22.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
